# nip2

./: .gitignore  .snapcraft.yaml  AUTHORS  COPYING  ChangeLog  Fred  Makefile.am  README  README.md  THANKS  TODO  acinclude.m4  autogen.sh  bootstrap.sh  configure.ac  configure.in  frede  nip2.appdata.xml  nip2.desktop.in  nip2.spec.in  nip3.desktop  nip3.desktop.in  nip3.spec  nip4.desktop  nip4.spec  nip4.xml
doc/: Makefile  README
doc/doc-programmer/: hierarchy.txt  imageview  makeindex.pl  menu.txt  regionview
doc/nipguide/: Example.def  Makefile  config.tex  intro.tex  menus.tex  nipguide.tex  program.tex  reference.tex  tutorial.tex
doc/src/: Makefile  config.tex  infrared.tex  intro.tex  mydefs.tex  nipguide.tex  program.tex  reference.tex  tutorial.tex  tutorial.ws
man/man1/: Makefile.am  nip2.1
po/: ChangeLog  POTFILES.in  POTFILES.skip  POTFILES2  en_GB.gmo  en_GB.po  malkovich.gmo  malkovich.po  nip2.pot  nip3.pot
proj/: config.h.win32
proj/src/: makefile.msc  nip.rc
share/: Makefile.am
share/nip2/compat/: Makefile.am
share/nip2/compat/7.10/: Colour.def  Format.def  Histogram.def  Matrix.def  Widgets.def  _convert.def  _predicate.def  _stdenv.def  _types.def
share/nip2/compat/7.12/: Colour.def  Filter.def  Makefile.am  Preferences.ws  _generate.def  _predicate.def  _stdenv.def
share/nip2/compat/7.14/: Colour.def  Histogram.def  Image.def  Tasks.def  _Object.def  _joe_utilities.def  _predicate.def  _stdenv.def  _types.def
share/nip2/compat/7.16/: Colour.def  Makefile.am  _convert.def  _list.def
share/nip2/compat/7.24/: Colour.def  (+7 more)
share/nip2/compat/7.8/: Histogram.def  Makefile.am  Morphology.def  Mosaic.def  New.def  Print.def  _stdenv.def
share/nip2/data/: AdobeRGB1998.icc  Allgemeines_CMYK_Profil.icm  HP5000_UVDuraImageGlossMaxQ.icc  Makefile.am  SC_paper_bas.ICC
share/nip2/data/examples/1_point_mosaic/: 1pt_mosaic.ws
share/nip2/data/examples/1_point_mosiac/: 1pt_mosaic.ws
share/nip2/data/examples/2_point_mosaic/: 2pts_mosaic.ws
share/nip2/data/examples/2_point_mosiac/: 2pts_mosaic.ws
share/nip2/data/examples/businesscard/: businesscard.ws
share/nip2/data/examples/clone/: clone.ws
share/nip2/data/examples/framing/: framing.ws
share/nip2/data/examples/logo/: logo2.ws
share/nip2/data/examples/manual_balance/: manual_balance.ws
share/nip2/data/examples/overlays_and_blending/: overlay_blend.ws
share/nip2/data/examples/registering/: registering.ws
share/nip2/rc/: ipgtkrc  mainw.glade
share/nip2/start/: Colour.def  Filter.def  Histogram.def  Image.def  Magick.def  Makefile.am  Math.def  Matrix.def  Object.def  Preferences.ws  Tasks.def  _Object.def  _convert.def  _generate.def  _joe_extra.def  _list.def  _magick.def  _predicate.def  _stdenv.def  _types.def
share/nip3/compat/: _compat.def
share/nip3/data/: macbeth_lab_d50.mat  macbeth_lab_d65.mat  rachel.con
share/nip3/start/: Preferences.ws  _convert.def  _magick.def
share/nip4/: Makefile.am
share/nip4/compat/: Makefile.am
share/nip4/compat/7.10/: Filter.def  Makefile.am  Math.def  Tasks.def  _generate.def  _joe_extra.def  _joe_utilities.def  _stdenv.def
share/nip4/compat/8.2/: Image.def  Makefile.am  Preferences.ws
share/nip4/compat/8.5/: Makefile.am  _convert.def  _stdenv.def
share/nip4/rc/: Makefile.am  mainw.glade
share/nip4/start/: _stdenv.def  _types.def
snap/: README.md  snapcraft.yaml
src/: .parse.c.swp  Makefile.am  TAGS  action.c  boxes.c  boxes.h  browse.c  browse.h  builtin.c  builtin.h  cache.c  cache.h  call.c  call.h  call8.c  call8.h  class.c  class.h  classmodel.c  classmodel.h  clock.c  clock.h  colour.c  colour.h  colourdisplay.c  colourdisplay.h  colourview.c  colourview.h  column.c  column.h  columnview.c  columnview.h  compile.c  compile.h  conversion.c  conversion.h  conversionview.c  conversionview.h  defbrowser.c  defbrowser.h  (+331 more)
src/BITMAPS/: Makefile.am  ant.xbm  automatic1.xbm  automatic1.xpm  automatic2.xpm  automatic3.xbm  book_closed.xpm  book_open.xpm  dropper.xpm  dropper_msk.xbm  dropper_src.xbm  magin.xpm  magin_src.xbm  magout.xpm  magout_src.xbm  mini_page.xpm  morph.xbm  pan.xpm  select.xpm  toolbox_closed.xpm  tools.xpm  watch_1.xbm  watch_1.xpm  watch_2.xbm  watch_3.xbm  watch_4.xbm  watch_4.xpm  watch_5.xbm  watch_5.xpm  watch_6.xbm  watch_6.xpm  watch_7.xbm  watch_7.xpm  watch_8.xbm  watch_8.xpm  watch_msk.xbm
src/gtk/: imagewindow.ui
src/new/: Makefile.am  app.c  app.h  gresources.xml  gtkutil.c  gtkutil.h  main.c  main.h  nip.h  startup.c
src/old/: Makefile.am  action.h  boxes.c  boxes.h  builtin.c  builtin.h  call.h  class.c  class.h  classmodel.c  clock.c  clock.h  colour.c  colourdisplay.c  column.c  columnview.h  compile.c  compile.h  conversion.c  conversion.h  doubleclick.c  doubleclick.h  dump.c  dump.h  editview.c  editview.h  error.h  expression.h  expressionview.h  filemodel.h  filesel.h  fontname.c  fontnameview.h  formula.c  formula.h  graphicview.h  graphwindow.c  graphwindow.h  group.c  group.h  (+112 more)
src/old/BITMAPS/: automatic.xbm  automatic.xpm  automatic2.xbm  automatic3.xpm  change.xbm  col.xpm  convol.xbm  dropper.xpm  floppy.xpm  image.xbm  kill.xbm  mag_msk.xbm  paint.xpm  program.xbm  separator.xpm  slider.xbm  toolbox_open.xpm  watch_2.xpm  watch_3.xpm
src/old/gtk/: displaybar-menu.ui  displaybar.ui  imagewindow-menu.ui  infobar.ui  tslider.ui
test/: Makefile.am  Print_test.ws  README  convert.sed  test.ws  test_all.sh.in  test_toolkits.ws  test_transform.ws
test/extras/: test-5x5.v  test_magick2.ws  test_recomp_order.ws  test_thumbnail.sh  test_transform.ws
test/images/: lena.mat  lena.tif
test/scripts/: test_cli.sh  test_formats.sh  test_seq.sh  test_threading.sh
test/tmp/: back.v  cmyk.v  difference.v  mono.v  rad.v  t1.tif  t1.v
test/workspaces/: big_and_small_disks.ws  big_and_small_gold_disks.ws  gold_sample.v  test_colour.ws  test_conv.ws  test_fail.ws  test_filter.ws  test_fourier.ws  test_histogram.ws  test_image.ws  test_magick.ws  test_magick2.ws  test_math.ws  test_matrix.ws  test_morph.ws  test_snip.def  test_stats.ws  test_tasks.ws  test_widgets.ws
(+110 files in other folders)
